fix(button): compact icon button had wrong padding

--- a/src/definitions/elements/button.less
+++ b/src/definitions/elements/button.less
@@ -708,7 +708,7 @@
 ---------------*/
 
 .ui.icon.buttons .button,
-.ui.icon.button:not(.animated) {
+.ui.icon.button:not(.animated):not(.compact) {
   padding: @verticalPadding @verticalPadding ( @verticalPadding + @shadowOffset );
 }
 .ui.animated.icon.button > .content > .icon,
